# gisapi-sdk-python

./: README.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
gisapi/: client.py
